syntax = "proto3";
option java_package = "org.wso2.carbon.identity.conditional.auth.functions.user.grpc";

service grpcService{
  rpc grpcInvoke(JsonRequest) returns (JsonResponse){};
}

message JsonRequest{
  string JsonString = 1;
}
message JsonResponse{
  string JsonString = 1;
}